--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,6 +29,9 @@ jobs:
     - run: npm ci
     - run: npm i
     - run: npm run generate
+    - run: git config user.name codebotx
+    - run: git config user.name anubhabr50@gmail.com 
     - run: git add .
     - run: git commit -m "Deploying update"
+    - run: git remote add origin https://codebotx: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@github.com/codebotx/squbix-resume-generator.git
     - run: git push origin squbix-resume
