--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "highlight.js": "^11.5.1",
         "markdown-it": "^13.0.1",
         "markdown-it-anchor": "^8.6.4",
+        "md-to-pdf": "^5.1.0",
         "mkdirp": "^1.0.4",
         "string": "^3.3.3"
     },
